--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.ExercisePrescription"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".UserAbout"
+            android:exported="false" />
         <activity
             android:name=".AdminExercisePrescriptionModify"
             android:exported="false" />
@@ -63,7 +66,7 @@
             android:name=".AdminExercisePrescription"
             android:exported="false" />
         <activity
-            android:name=".About"
+            android:name=".AdminAbout"
             android:exported="false" />
         <activity
             android:name=".UpdateProfile"
@@ -103,7 +106,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
