--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.ExercisePrescription"
         tools:targetApi="31">
         <activity
+            android:name=".AdminMessage"
+            android:exported="false" />
+        <activity
+            android:name=".UserMessage"
+            android:exported="false" />
+        <activity
             android:name=".UserDataView"
             android:exported="false" />
         <activity
